rfclint (0.6.1) distribution(s); urgency=low

	* If suggestion if UTF8, then force format template to be UTF8 for Python 2.0

-- Jim Schaad <ietf@augustcellars.com>  Fri 24 Jan 2020 12:00:00 -0700

rfclint (0.5.19) distribution(s); urgency=low

	* Modify BCP14 if needed
	* Add <xref> marker when spell checking
	* Change the source tree pointer

-- Jim Schaad <ietf@augustcellars.com>  Thur 29 Aug 2019 12:00:00 -0700

rfclint (0.5.17) distribution(s); urgency=low

	* Update documentation to match recent work
	* Add Copyright messages to source files
	* Remove space padding in display of spelling and dups.
	* Keep the case of the first word to display for dup detection
	* Add first level support for BCP 14 checking - Only reports does not fix
	* Add more programming checks for style
	* Remove Python 3.4 from supported list

-- Jim Schaad <ietf@augustcellars.com>  Fri 16 Aug 2019 12:00:00 -0700

rfclint (0.5.16) distribution(s); urgency=low

	* Update version dependency on rfctools_common

-- Jim Schaad <ietf@augustcellars.com>  Mon 1 July 2019 12:00:00 -0700

rfclint (0.5.15) distribution(s); urgency=low

	* Add svgcheck to rfclint
	* Use file names to extract data if they exist

-- Jim Schaad <ietf@augustcellars.com>  Sat 1 Jun 2019 12:00:00 -0700

rfclint (0.5.14) distribution(s); urgency=low

	* Clean up so that pyflakes is happy

-- Jim Schaad <ietf@augustcellars.com>  Sun 21 Apr 2019 12:00:00 -0700

rfclint (0.5.11) distribution(s); urgency=low

	* Aspell does not permit numbers to be part of words while Python does.  Change the matching patterns so that numbers are not part of words.
	* Change some messages from warnings to info

-- Jim Schaad <ietf@augustcellars.com>  Wed 19 Dec 2018 12:00:00 -0700

rfclint (0.5.10) distribution(s); urgency=low

	* Add --skip-code and --skip-artwork options to not do spell and duplicate checking on these elements.
	* Preserve all of the whitespace in the source file when emitting the output file