@@ -1,3 +1,3 @@
-rfclint = 0.6.1
-rfctools_common = 0.6.1
+rfclint = 0.6.3
+rfctools_common = 0.6.2
 svgcheck = 0.6.0
