@@ -3,7 +3,7 @@
 # ----------------------------------------------------
 
 # Static values
-__version__ = '0.6.1'
+__version__ = '0.6.3'
 NAME = 'rfclint'
 VERSION = [int(i) if i.isdigit() else i for i in __version__.split('.')]
 
