@@ -1,3 +1,9 @@
+rfctools-common (0.6.2) distribhution(s); urgency=low
+
+	* Update the RNG file file.
+
+-- Jim Schaad <ietf@augustcellars.com>  Fri 10 Apr 2020 12:00:00 -0700
+
 rfctools-common (0.6.1) distribhution(s); urgency=low
 
 	* Remove module six from the setup
