@@ -1,3 +1,10 @@
+rfclint (0.6.3) distribution(s); urgency=low
+
+	* Clean up --rng help string
+	* If name="" is an attribute to sourcecode then dump to stdout
+
+-- Jim Schaad <ietf@augustcellars.com>  Fri 24 Jan 2020 12:00:00 -0700
+
 rfclint (0.6.1) distribution(s); urgency=low
 
 	* If suggestion if UTF8, then force format template to be UTF8 for Python 2.0
